# Learning

./: .gitignore
CPP/: Lu-Learning-CPP.sln
CPP/Source/CPP GTest/: CPP GTest.vcxproj  CPP GTest.vcxproj.filters  Learn_ClassConstruct.cpp  Main.cpp  PCH.h  Test_Assembly.cpp  Test_Assembly_ASM.asm  Test_CustomStdAllocator.cpp  Test_GS.cpp  Test_MemoryAccess.cpp  Test_Scope.cpp  UTF8.cpp  例外処理.cpp  例外処理_仮想関数例外.cpp
CPP/Source/CPP GTest/Learn/: Learn_MemoryOrder.cpp  Learn_STD_Variant.cpp  Learn_VTable.cpp
CPP/Source/CPP GTest/Test/: Test_NVRO.cpp  Test_OpenCV.cpp
MSBuild-ForLinux/: CMakeLists.txt
MSBuild-ForLinux/CMake_Case1/: CMakeLists.txt  CMake_Case1.cpp  CMake_Case1.h
SKia/: Lu-Learning-Skia.sln
SKia/CustomDraw-WinForm/: CustomDraw-WinForm.csproj  Form1.Designer.cs
SKia/CustomDraw-WinForm/Properties/PublishProfiles/: FolderProfile.pubxml
SKia/TextWrap-AvaloniaUI/: App.axaml  App.axaml.cs  CustomRender.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  SkiaCanvas.cs  app.manifest
SKia/TextWrap-WinForm/: App.config  Form1.Designer.cs  Form1.cs  Program.cs  TextWrap-WinForm.csproj  packages.config
SKia/TextWrap-WinForm/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
SKia/skiasharp-wrap/: skiasharp-wrap.csproj
